Adds a "Supported and regulated" section

--- a/Index.htm
+++ b/Index.htm
@@ -323,6 +323,17 @@
                 <button class="btn-lujo" id="btnInfo" disabled>Login</button>
                 <button class="btn-lujo" id="btnLogin" disabled>+ Info</button>
             </div>
+
+
+
+
+            <div>
+                <spans class="supported_by">Supported and regulated by:</spans>
+
+                <div>
+                    <img src="assets/supported_by.png" alt="Icon" style="max-width: 200px;">
+                </div>
+            </div>
             </div>
         </div>
     </div>
