Adapts the mobile version

--- a/Index.htm
+++ b/Index.htm
@@ -25,8 +25,7 @@
     
             <div id="reloj-container">
                 <p id="title-container">
-                    <span id="title">LOTUS TRUST <br>ENGINE</span>
-                    <span id="subtitle">Where Function is Draped in Art</span>
+                    <img src="assets/lotusengine_full.svg" alt="Title" id="title">
                 </p>
                 <div id="container">
                     <div id="app">
